--- a/views/includes/nav.ejs
+++ b/views/includes/nav.ejs
@@ -4,6 +4,7 @@
             directions_bike
         </i>
     </div>
-    <a class="item">Visuals</a>
-    <a class="item">Stats</a>
+    <a href="/" class="item">Metrics</a>
+    <a href="/" class="item">Visuals</a>
+    <a href="/stats" class="item">Stats</a>
 </div>
